--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
     "nodemon": "^2.0.15"
   }
